--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "dirty-chai": "^1.2.2",
+    "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0"
   },
   "devDependencies": {
